--- a/index.html
+++ b/index.html
@@ -5,12 +5,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <title>Abdur Rashid Sawom </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <section class="container banner-top">
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1> <span class="orange-color"> Abdur Rashid Sawom </span> World </h1>
+
+            <p class="fonts">Hi, I am Abdur Rashid Sawom . Currently I am studying in Computer Science and Engineering at University of Asia Pacific. I am currently learning Python.</p> <br>
+
+            <a href="https://github.com/Sawom" target="_blank" class="links-button"> Hire Me </a>
+        </div>
+            
+        <div class="half-width">
+            <img src="images/final.png" alt="">
+        </div>
+  
+    </section>
+
+    <section class="dream-part container">
+
+        <div class="half-width ">
+            <img  src="images/devloper.png" alt="">
+        </div>
+
+        <div class="half-width ">
+            <h1>Dream</h1>
+            <h2> Become a full stack web developer </h2>
+
+            <p class="fonts">I have already learned the basic HTML and CSS. I can build any simple website. I want to be a full stack web developer. My goal is to build 3 websites and learn advanced topics.</p>
+            <br>
+            <a class="links-button" href="" target="_blank"> Download Resume  </a>
+        </div>
+
+    </section>
     
+
+    <section class="experience-part" >
+        <h3> Experiences </h3>
+
+        <div class="container">
+
+            <div class="half-width box-part">
+                <h1>Skills I have</h1>
+                <h2 class="blue"> 2019 - Present</h2>
+
+                <ul class="fonts">
+                    <li> Languages : C, Cpp , Java , Python </li>
+                    <li> Database: MySQL </li>
+                    <li> HTML, CSS </li>
+                    <li> Proper knowledge of Github </li>
+                </ul>
+
+            </div>
+
+
+            <div class="half-width box-part" >
+                <h1>Projects I have Done</h1>
+                <h2 class="blue"> 2019 - Present</h2>
+
+                <ul class="fonts">
+                    <li> CAR SHOP MANAGEMENT SYSTEM <br> <small>  (sql database project) </small>  </li>
+                    <li> Calender <br> <small> (C programming) </small> </li>
+                    <li> Number Guessing game <br> <small> (Cpp programming) </small> </li>
+                    <li> Banking System <br> <small> (Cpp programming) </small>  </li>
+                    <li> Conference Room Schedule System <br> <small> (Algorithm project) </small> </li>
+                    <li> A Banking management System <br> <small> (java gui project) </small>  </li>
+                    <li> Basic web page <br> <small> (HTML project)  </small> </li>
+                    <li> Personal portfolio <br> <small> (HTML, CSS ) </small> </li>
+                </ul>
+            </div>
+
+        </div>
+
+    </section>
+
+    <footer>
+        <p>
+        <big> Developed By</big>  &copy; Abdur Rashid Sawom 
+        </p>
+
+    </footer>
+
+
 </body>
 </html>
