--- a/index.html
+++ b/index.html
@@ -57,9 +57,15 @@
 
                 <ul class="fonts">
                     <li> Languages : C, Cpp , Java , Python </li>
+                    <br>
                     <li> Database: MySQL </li>
+                    <br>
                     <li> HTML, CSS </li>
+                    <br>
                     <li> Proper knowledge of Github </li>
+                    <br>
+                    <li>Problem solving</li>
+                    <br>
                 </ul>
 
             </div>
@@ -70,14 +76,31 @@
                 <h2 class="blue"> 2019 - Present</h2>
 
                 <ul class="fonts">
-                    <li> CAR SHOP MANAGEMENT SYSTEM <br> <small>  (sql database project) </small>  </li>
-                    <li> Calender <br> <small> (C programming) </small> </li>
-                    <li> Number Guessing game <br> <small> (Cpp programming) </small> </li>
-                    <li> Banking System <br> <small> (Cpp programming) </small>  </li>
-                    <li> Conference Room Schedule System <br> <small> (Algorithm project) </small> </li>
-                    <li> A Banking management System <br> <small> (java gui project) </small>  </li>
-                    <li> Basic web page <br> <small> (HTML project)  </small> </li>
-                    <li> Personal portfolio <br> <small> (HTML, CSS ) </small> </li>
+                    <li> CAR SHOP MANAGEMENT SYSTEM  <small>  (sql database project) </small>  </li> <br>
+                    <a target="_blank"  class="viewBtn" href="https://github.com/Sawom/SQL-Database-Project">view project</a> <br> <br>
+                    <li> Calender <small> (C programming) </small> </li> <br>
+                    <a target="_blank" class="viewBtn" href="https://github.com/Sawom/C-Project"> view project </a> <br> <br>
+                    <li> Number Guessing game  <small> (Cpp programming) </small> </li> <br>
+                    <a target="_blank" class="viewBtn" href="https://github.com/Sawom/Cpp-Project"> view project </a>
+                    <br> <br>
+                    <li> Banking System  <small> (Cpp programming) </small>  </li> <br>
+                    <a target="_blank" class="viewBtn" href="https://github.com/Sawom/Cpp-Project"> view project </a>
+                    <br> <br>
+
+                    <li> Conference Room Schedule System  <small> (Algorithm project) </small> </li> <br>
+                    <a target="_blank" class="viewBtn" href="https://github.com/Sawom/Algorithm-Project"> view project </a>
+                    <br> <br>
+
+                    <li> A Banking management System  <small> (java gui project) </small>  </li> <br>
+                    <a target="_blank" class="viewBtn" href="https://github.com/Sawom/Java-project"> view project </a>
+                    <br> <br>
+
+                    <li> Basic web page  <small> (HTML project)  </small> </li> <br>
+                    <a target="_blank" class="viewBtn" href="https://github.com/Sawom/Web-Devlopment-Project-1"> view project </a>
+                    <br> <br>
+                    <li> Personal portfolio  <small> (HTML, CSS ) </small> </li> <br>
+                    <a target="_blank" class="viewBtn" href="https://sawom.github.io/WDP2-personal-portfolio/"> view project </a> 
+                    <br>
                 </ul>
             </div>
 
